opam-version: "1.2"
maintainer: "keigo.imai@gmail.com"
authors: ["Keigo Imai"]
homepage: "https://github.com/keigoi/linocaml"
bug-reports: "https://github.com/keigoi/linocaml/issues"
dev-repo: "https://github.com/keigoi/linocaml.git"
license: "Apache"
build:
  [[ "dune" "build" "-p" name "-j" jobs ]]
available: [ ocaml-version >= "4.05" ]
depends: [
  "dune" {build & >= "1.0"}
  "ocaml-migrate-parsetree"
  "ppx_tools_versioned"
]
depopts: [
  "async"
  "lwt"
]
