(executable
  (name ex_array)
  (public_name ex_array)
  (modules ex_array)
  (flags ("-short-paths" "-w" "-32")) ; Unused value declaration.
  (preprocess (pps linocaml.ppx))
  (libraries linocaml))

(executable
  (name ex_linlist)
  (public_name ex_linlist)
  (modules ex_linlist)
  (flags ("-short-paths" "-w" "-32")) ; Unused value declaration.
  (preprocess (pps linocaml.ppx))
  (libraries linocaml))

(executable
  (name ex_session)
  (public_name ex_session)
  (modules ex_session)
  (flags ("-short-paths" "-w" "-32")) ; Unused value declaration.
  (preprocess (pps linocaml.ppx))
  (libraries linocaml threads))
